--- a/pages/teacher/index.wxml
+++ b/pages/teacher/index.wxml
@@ -2,6 +2,43 @@
 
 <view class="page">
   <view class="page__hd" style="text-align:center">
+
+
+  {{classname}} 暗号
+
+
+  </view>
+  <view class="page__bd">
+
+        <form bindsubmit="formSubmit" bindreset="formReset">
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">暗号</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input class="weui-input" placeholder="请输入暗号" name="password" password maxlength="8" type='number'/>
+                </view>
+            </view>
+        </view>
+
+       
+
+       
+
+        <view class="weui-btn-area">
+            <button class="weui-btn" type="primary" bindtap="showTopTips" formType="submit">确定</button>
+        </view>
+
+        <button class="confirmBtn" formType="reset" type='default'>重设</button>
+
+
+        </form>
+    </view>
+</view>
+
+<!--<view class="page">
+  <view class="page__hd" style="text-align:center">
   {{classname}} 暗号
   </view>
   <view class="page__bd">
@@ -28,4 +65,4 @@
 
     </form>
   </view>
-</view>
+</view>-->
