--- a/pages/teacher/index.wxml
+++ b/pages/teacher/index.wxml
@@ -1,14 +1,10 @@
 <!--index.wxml-->
 
 <view class="page">
-  <view class="page__hd" style="text-align:center">
-
-
+  <view class="page__hd content" style="text-align:center">
   {{classname}} 暗号
-
-
   </view>
-  <view class="page__bd">
+  <view class="page__bd middle" >
 
         <form bindsubmit="formSubmit" bindreset="formReset">
         <view class="weui-cells weui-cells_after-title">
@@ -20,24 +16,20 @@
                     <input class="weui-input" placeholder="请输入暗号" name="password" password maxlength="8" type='number'/>
                 </view>
             </view>
-        </view>
-
-       
-
-       
-
+        </view>    
+<!--更改的按钮属性 -->
         <view class="weui-btn-area">
             <button class="weui-btn" type="primary" bindtap="showTopTips" formType="submit">确定</button>
         </view>
 
         <button class="confirmBtn" formType="reset" type='default'>重设</button>
 
-
         </form>
     </view>
 </view>
 
-<!--<view class="page">
+<!-- 这是原来的格式
+<view class="page">  
   <view class="page__hd" style="text-align:center">
   {{classname}} 暗号
   </view>
@@ -52,9 +44,7 @@
         </view>
         
     </view>
-           
-        
-
+          
       <view class="weui-cell">
 
         <button class="weui-btn confirmBtn" formType="submit">确定</button>
