--- a/pages/public/announcement_detail.wxml
+++ b/pages/public/announcement_detail.wxml
@@ -1,6 +1,6 @@
 <view class="page">
     <view class="page__hd">
-        <view class="page__title">具体公告</view>
+        <view class="page__title" style="text-align:center">具体公告</view>
         <view class="page__desc">{{anncId}}</view>
     </view>
     <view class="page__bd">
