修改了样式；

--- a/app.wxss
+++ b/app.wxss
@@ -13,4 +13,8 @@
   background:#4682b4;
   color:#fff;
 }
-
+page{
+  background-color: #F8F8F8;
+  font-size: 16px;
+  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+}
