--- a/pages/teacher/main.wxml
+++ b/pages/teacher/main.wxml
@@ -15,36 +15,48 @@
       <view class="weui-tab__panel">
 
         <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
-
-          <block wx:for="{{announcements}}" wx:key="index">
-            <!--<view class="weui-cells__title">{{item.ann_title}}</view>-->
-            <view class="weui-cells weui-cells_after-title style">
-              <navigator url='../public/announcement_detail?annc_id={{item.id}}'>
-                <view class="weui-cell">
-                  <view class="weui-cell__bd">{{item.ann_title}}</view>
-                  <view class="weui-cell__ft weui-cell__ft_in-access">{{item.create_time}}</view>
-                </view>
-
-              </navigator>
+          <view class="weui-panel">
+            <view class="weui-panel__hd">公告列表</view>
+            <view class="weui-panel__bd">
+             
+              <view class="weui-media-box weui-media-box_text" wx:for="{{announcements}}" wx:key="index" >
+                <!-- <view class="weui-cells__title">{{item.ann_title}}</view> -->
 
 
-              <view class='weui_cell'>
-                <view class="weui-cell__ft">
-                  <button class='weui-btn mini-btn color' type='defult' size='mini' bindtap='anncreadlist' id="{{item.id}}">家长已阅情况</button>
-                </view>
+               <navigator url='../public/announcement_detail?annc_id={{item.id}}'>
+                  <view class="weui-media-box__title weui-media-box__title_in-text">{{item.ann_title}}</view>
+                  <!-- <view class="weui-cell__ft weui-cell__ft_in-access">{{item.create_time}}</view> -->
+                  <!-- </view> -->
+                  <view class="weui-media-box__desc "></view>
+                  </navigator>
+                  <view class="weui-media-box__info">
+
+                    <view class="weui-media-box__info__meta">{{item.create_time}}</view>
+                    <view class="weui-media-box__info__meta weui-media-box__info__meta_extra">
+                      <navigator url="../public/annc_read_list?annc_id={{item.id}}" hover-class="navigator-hover">家长已阅情况</navigator>
+                    </view>
+                     
+                  </view>
+                
+
+
+
+                <!-- <view class='weui_cell'> -->
+                <!-- <view class="weui-btn-area"> -->
+                <!-- <button class='weui-btn mini-btn infobtn' type='defult' size='mini' bindtap='anncreadlist' id="{{item.id}}">家长已阅情况</button> -->
+                <!-- </view> -->
+                <!-- </view> -->
               </view>
 
-
             </view>
-          </block>
-
+          </view>
           <view class="section">
             <view class="flex-wrp" style="height: 52px;flex-direction:column;">
             </view>
           </view>
 
           <view align="center">
-            <image class='share-btn' bindtap="addAnnc" src='../images/add.png'>+</image>
+            <image class='share-btn' bindtap="addAnnc" src='../images/add2.png'>+</image>
           </view>
         </view>
         <view class="weui-tab__content" hidden="{{activeIndex != 1}}">选项二的内容
