--- a/pages/teacher/main.wxss
+++ b/pages/teacher/main.wxss
@@ -8,15 +8,15 @@
 /* width:100%;  */
 background:linear-gradient(#4682b4,#aaa);
  margin-top: 30rpx;
- font-size: 50rpx;
-  font-weight: 500;
+ /* font-size: 50rpx; */
+  /* font-weight: 500; */
 color:#fff; 
 position:fixed; 
-bottom:60rpx; 
-border-radius:80rpx;
+bottom:1px; 
+border-radius:15px;
 left:42%;
-width: 120rpx;
-height: 120rpx;
+width: 50px;
+height: 50px;
 z-index: 999;
 border: 4px solid;
 } 
@@ -27,6 +27,10 @@ border: 4px solid;
   color:#fff;
 }
 
+.infobtn{
+  background-color: #a3bbcf;
+  padding:1px;
+}
 .color{
   background-color: rgba(43, 209, 28, 0.658);
   margin-right: 10px;
